[package]
name = "openexchangerates"
version = "0.1.0"
authors = ["Johan Sim Jian An <johansja@gmail.com>"]
license = "MIT"
description = "Library for communicate with OpenExchangeRates API."
repository = "https://github.com/JohanSJA/openexchangerates-rs.git"

[dependencies]
hyper = "0.8"
rustc-serialize = "0.3"
yup-hyper-mock = "1.3"
log = "0.3"
chrono = "0.2"
