[package]
name = "openexchangerates"
version = "0.1.7"
authors = ["Johan Sim Jian An <johansja@gmail.com>"]
license = "MIT"
description = "Library for communicate with OpenExchangeRates API."
repository = "https://github.com/JohanSJA/openexchangerates-rs.git"
build = "build.rs"

[features]
default = ["serde_codegen"]
unstable = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
serde = "0.8"
serde_json = "0.8"
serde_macros = { version = "0.8", optional = true }
hyper = "0.9"
chrono = "0.2"

[dev-dependencies]
yup-hyper-mock = "1.3"